objects/Enrollment_and_Billing__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Account_Legal_Name__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>Text(Implementation_Tracking_ID__r.Account_Legal_Name__r.Anthem_Entity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_or_Declined_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved or Declined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Install_Group_Loaded__c</fullName>
        <formula>Case_Installation__r.Group_Loaded__c</formula>
        <label>Case Install Group Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Install_Stage__c</fullName>
        <formula>TEXT(Case_Installation__r.Stage__c)</formula>
        <label>Case Install Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Installation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Installation</label>
        <referenceTo>Issue_Control__c</referenceTo>
        <relationshipLabel>Membership</relationshipLabel>
        <relationshipName>Membership</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_SME_Queue_time__c</fullName>
        <description>Pratibha created this for PRDCRM- 30663</description>
        <formula>IF( 
ISBLANK(In_Progress_Date_Completed__c),Now() - Not_Started_Date_Completed__c, 
(In_Progress_Date_Completed__c - Not_Started_Date_Completed__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME Queue time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_SME_time__c</fullName>
        <description>Pratibha created this for PRDCRM- 30663</description>
        <formula>IF( 
ISBLANK(Approved_Date_Completed__c),((Now() - In_Progress_Date_Completed__c) - Pending_Correction_Time__c) , 
((Approved_Date_Completed__c - In_Progress_Date_Completed__c) - Pending_Correction_Time__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOH_Required__c</fullName>
        <label>DOH Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EET_Client_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EET Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EET_File_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EET File Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EET_Output_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EET Output Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EET_Prod_Run__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EET Prod Run</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Report_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Report Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK( Implementation_Tracking_ID__r.Group_Number__r.Id ), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Group_Number__r.Id, Implementation_Tracking_ID__r.Group_Number__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>Implementation_Tracking_ID__r.Group_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_State__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.HQ_State__c)</formula>
        <label>HQ State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Issued_Order_Level__c</fullName>
        <label>ID Card Issued Order Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mass Order</fullName>
                </value>
                <value>
                    <fullName>Partial Order</fullName>
                </value>
                <value>
                    <fullName>Auto-generate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Order_Re_triggered_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Order Re-triggered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_Card_Special_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID_Cards_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Cards Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_Cards_Triggered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Cards Triggered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Name1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Start_Date__c</fullName>
        <description>This field refers to the Implementation Case Start Date field of the related Implementation Case.</description>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.EffectiveDate</formula>
        <label>Implementation Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Id__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipName>Enrollment_and_Billing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In_Progress_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Enrollment_Submission_Type__c</fullName>
        <label>Initial Enrollment Submission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paper/Form</fullName>
                </value>
                <value>
                    <fullName>EET/EDI</fullName>
                </value>
                <value>
                    <fullName>Census</fullName>
                </value>
                <value>
                    <fullName>Employer Access</fullName>
                </value>
                <value>
                    <fullName>Manual Move from ISG</fullName>
                </value>
                <value>
                    <fullName>Manual Move from FACETS</fullName>
                </value>
                <value>
                    <fullName>Manual Move from NASC</fullName>
                </value>
                <value>
                    <fullName>OME (Online Member Enrollment)</fullName>
                </value>
                <value>
                    <fullName>Plan Source Real Time</fullName>
                </value>
                <value>
                    <fullName>Plan Source Group Tape</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_E_B_Details_Applicable__c</fullName>
        <label>Is Membership Details Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Imp_Chg_Request_Detail_Applicable__c</fullName>
        <label>Is Imp &amp; Chg Request Detail Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Owner_the_Logged_in_user__c</fullName>
        <formula>IF(Owner:User.Id == $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner the Logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JAA_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.JAA_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JAA Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoggedinProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedinProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCS_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.MCS_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCS Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Level_ID_Card__c</fullName>
        <label>Member Level ID Card</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Large_Group_Paper_Exception_Granted__c</fullName>
        <label>New Large Group: Paper Exception Granted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The product mix is not supported on the tools i.e.: Stand Alone Specialty</fullName>
                </value>
                <value>
                    <fullName>Broker needs to be trained on the availability of the suite of the electronic tool</fullName>
                </value>
                <value>
                    <fullName>Group refuses to submit electronically</fullName>
                </value>
                <value>
                    <fullName>Group does not have computer access to submit electronically</fullName>
                </value>
                <value>
                    <fullName>Group has security settings that block the use of our electronic tools</fullName>
                </value>
                <value>
                    <fullName>Other (Please Specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_Started_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Not_Started_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Not_Started_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Not Started.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Not Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Errors__c</fullName>
        <label>Number of Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ongoing_Enrollment_Submission_Type__c</fullName>
        <label>Ongoing Enrollment Submission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paper/Form</fullName>
                </value>
                <value>
                    <fullName>EET/EDI</fullName>
                </value>
                <value>
                    <fullName>Census</fullName>
                </value>
                <value>
                    <fullName>Employer Access</fullName>
                </value>
                <value>
                    <fullName>Manual Move from ISG</fullName>
                </value>
                <value>
                    <fullName>Manual Move from FACETS</fullName>
                </value>
                <value>
                    <fullName>Manual Move from NASC</fullName>
                </value>
                <value>
                    <fullName>OME (Online Member Enrollment)</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
                <value>
                    <fullName>Plan Source Real Time</fullName>
                </value>
                <value>
                    <fullName>Plan Source Group Tape</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Effective_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName + &apos; &apos; +  Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Membership</relationshipLabel>
        <relationshipName>Enrollment_and_Billing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Enrollment_and_Billing_Date__c</fullName>
        <description>Original Enrollment and Billing Date Used In The Workflow Rule When A New Record Is Created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment &amp; Billing Original Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Special_Instructions__c</fullName>
        <label>Other Special Instructions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Overall_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>IF(Owner:User.LastName!=null, Owner:User.FirstName + &apos; &apos; + Owner:User.LastName, Owner:Queue.QueueName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Exception_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Paper Exception Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PendingCorrectionAction__c</fullName>
        <formula>IF(AND(OR(LoggedinProfile__c ==&apos;SME&apos;,LoggedinProfile__c ==&apos;SME Dual&apos;,LoggedinProfile__c ==&apos;Specialty Post Sales&apos;, LoggedinProfile__c ==&apos;Specialty Post Sales Dual&apos;), Tech_Support_EnrollmentBilling__c== False),&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PendingCorrectionAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Pending Correction from WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Time__c</fullName>
        <description>Pratibha created this for PRDCRM- 30663</description>
        <label>Pending Correction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Approved_Declined__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined from Pending Correction As Prior Value. Retrieving From WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Approved/Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Corrections_Stage__c</fullName>
        <description>This field fetches the associated Pending Correction&apos;s Stage.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Corrections Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pooled_Non_Pooled__c</fullName>
        <formula>Text(Implementation_Tracking_ID__r.Account_Legal_Name__r.Pooled_Non_Pooled__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pooled/Non-Pooled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probationary_Period__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.ProbationaryPeriod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probationary Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Enrollment_File_Status__c</fullName>
        <label>Production Enrollment File Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on File Delivery</fullName>
                    <label>Waiting On File Delivery</label>
                </value>
                <value>
                    <fullName>File Received and Being Reviewed/Loaded</fullName>
                    <label>File Received And Being Reviewed/Loaded</label>
                </value>
                <value>
                    <fullName>File Loading Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking_ID__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Situs_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instruction_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Instruction Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 Not Started</fullName>
                    <default>true</default>
                    <label>01 Not Started</label>
                </value>
                <value>
                    <fullName>02 Work In Progress</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction Returned</fullName>
                </value>
                <value>
                    <fullName>04 Approved</fullName>
                </value>
                <value>
                    <fullName>05 Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Stage__c</fullName>
        <label>Sub-Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending a Technical Fix</fullName>
                </value>
                <value>
                    <fullName>Pending Too Early to Process</fullName>
                </value>
                <value>
                    <fullName>Pending Enrollment</fullName>
                </value>
                <value>
                    <fullName>Pending Cancellation</fullName>
                </value>
                <value>
                    <fullName>Pending Clarification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Support_EnrollmentBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech_Support_EnrollmentBilling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_To_Approve_Deny__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This Is How Long It Took The SME Department To Approve/Deny A SME Record</description>
        <inlineHelpText>This Is How Long It Took The SME Department To Approve/Deny A SME Record</inlineHelpText>
        <label>Time To Approve/Deny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_To_Pend__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This Is How Long It Took A SME Department To Submit A Pending Correction</description>
        <inlineHelpText>This Is How Long It Took A SME Department To Submit A Pending Correction</inlineHelpText>
        <label>Time To Pend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_SME_Dept__c</fullName>
        <description>Sum Of Time To Pend And Time To Approve/Deny</description>
        <formula>IF( Pending_Correction_Date__c &lt;&gt; Approved_or_Declined_Date__c, (Time_To_Approve_Deny__c + Time_To_Pend__c ), Time_To_Pend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum Of Time To Pend And Time To Approve/Deny</inlineHelpText>
        <label>Time in SME Dept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Enrollments_Submitted__c</fullName>
        <label>Total Enrollments Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <description>Total Time SME Record Was In The SME Department And The Sales Support/Implementations 		Department</description>
        <formula>IF( 
ISNULL(Pending_Correction_to_Approved_Declined__c), 0 ,

CASE(MOD( Original_Enrollment_and_Billing_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Enrollment_and_Billing_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Enrollment_and_Billing_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Enrollment_and_Billing_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Enrollment_and_Billing_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Enrollment_and_Billing_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Enrollment_and_Billing_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Enrollment_and_Billing_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((Pending_Correction_to_Approved_Declined__c -  Original_Enrollment_and_Billing_Date__c)/7)*5)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Time SME Record Was In The SME Department And The Sales Support/Implementations 		Department</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Members__c</fullName>
        <label>Transfer Members</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Membership</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Initial_Enrollment_Submission_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Stage__c</columns>
        <columns>Sub_Stage__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Region__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Central</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Initial_Enrollment_Submission_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Region__c</columns>
        <columns>Owner__c</columns>
        <columns>Case_Install_Stage__c</columns>
        <columns>Case_Install_Group_Loaded__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>notEqual</operation>
            <value>National Accounts</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Central</value>
        </filters>
        <label>Local Membership Central Unassigned</label>
        <language>en_US</language>
        <queue>Enrollment_and_Billing_Local</queue>
    </listViews>
    <listViews>
        <fullName>East</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Initial_Enrollment_Submission_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Region__c</columns>
        <columns>Owner__c</columns>
        <columns>Case_Install_Stage__c</columns>
        <columns>Case_Install_Group_Loaded__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>notEqual</operation>
            <value>National Accounts</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>East</value>
        </filters>
        <label>Local Membership East Unassigned</label>
        <language>en_US</language>
        <queue>Enrollment_and_Billing_Local</queue>
    </listViews>
</CustomObject>